log/build_2025-07-10_12-18-09/cpp_package/stderr.log
CMake Warning (dev) at /usr/lib/aarch64-linux-gnu/cmake/pcl/Modules/FindFLANN.cmake:45 (find_package):
  Policy CMP0144 is not set: find_package uses upper-case <PACKAGENAME>_ROOT
  variables.  Run "cmake --help-policy CMP0144" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  CMake variable FLANN_ROOT is set to:

    /usr

  For compatibility, find_package is ignoring the variable, but code in a
  .cmake module might still use it.
Call Stack (most recent call first):
  /usr/lib/aarch64-linux-gnu/cmake/pcl/PCLConfig.cmake:261 (find_package)
  /usr/lib/aarch64-linux-gnu/cmake/pcl/PCLConfig.cmake:306 (find_flann)
  /usr/lib/aarch64-linux-gnu/cmake/pcl/PCLConfig.cmake:570 (find_external_library)
  /opt/ros/jazzy/share/pcl_conversions/cmake/ament_cmake_export_dependencies-extras.cmake:21 (find_package)
  /opt/ros/jazzy/share/pcl_conversions/cmake/pcl_conversionsConfig.cmake:41 (include)
  /opt/ros/jazzy/share/pcl_ros/cmake/ament_cmake_export_dependencies-extras.cmake:21 (find_package)
  /opt/ros/jazzy/share/pcl_ros/cmake/pcl_rosConfig.cmake:41 (include)
  CMakeLists.txt:30 (find_package)
This warning is for project developers.  Use -Wno-dev to suppress it.

CMake Warning (dev) at CMakeLists.txt:32 (find_package):
  Policy CMP0074 is not set: find_package uses <PackageName>_ROOT variables.
  Run "cmake --help-policy CMP0074" for policy details.  Use the cmake_policy
  command to set the policy and suppress this warning.

  CMake variable PCL_ROOT is set to:

    /usr

  For compatibility, CMake is ignoring the variable.
This warning is for project developers.  Use -Wno-dev to suppress it.

/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp: In constructor ‘GroundPlaneFitterNode::GroundPlaneFitterNode()’:
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:19:65: error: class ‘GroundPlaneFitterNode’ does not have any field named ‘first_plane_’
   19 |     GroundPlaneFitterNode() : Node("ground_plane_fitter_node"), first_plane_(true)
      |                                                                 ^~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:32:44: error: ‘input_topic_’ was not declared in this scope
   32 |         this->get_parameter("input_topic", input_topic_);
      |                                            ^~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:33:53: error: ‘refined_ground_topic_’ was not declared in this scope
   33 |         this->get_parameter("refined_ground_topic", refined_ground_topic_);
      |                                                     ^~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:34:47: error: ‘obstacle_topic_’ was not declared in this scope
   34 |         this->get_parameter("obstacle_topic", obstacle_topic_);
      |                                               ^~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:35:45: error: ‘marker_topic_’ was not declared in this scope
   35 |         this->get_parameter("marker_topic", marker_topic_);
      |                                             ^~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:36:60: error: ‘ground_height_threshold_min_’ was not declared in this scope
   36 |         this->get_parameter("ground_height_threshold_min", ground_height_threshold_min_);
      |                                                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:37:60: error: ‘ground_height_threshold_max_’ was not declared in this scope
   37 |         this->get_parameter("ground_height_threshold_max", ground_height_threshold_max_);
      |                                                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:38:48: error: ‘voxel_leaf_size_’ was not declared in this scope
   38 |         this->get_parameter("voxel_leaf_size", voxel_leaf_size_);
      |                                                ^~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:39:58: error: ‘ransac_distance_threshold_’ was not declared in this scope
   39 |         this->get_parameter("ransac_distance_threshold", ransac_distance_threshold_);
      |                                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:40:48: error: ‘smoothing_alpha_’ was not declared in this scope
   40 |         this->get_parameter("smoothing_alpha", smoothing_alpha_);
      |                                                ^~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:51:9: error: ‘marker_publisher_’ was not declared in this scope; did you mean ‘rmw_publisher_t’?
   51 |         marker_publisher_ = this->create_publisher<visualization_msgs::msg::Marker>(marker_topic_, 10);
      |         ^~~~~~~~~~~~~~~~~
      |         rmw_publisher_t
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:53:9: error: ‘accumulated_candidates_’ was not declared in this scope
   53 |         accumulated_candidates_ = pcl::make_shared<pcl::PointCloud<pcl::PointXYZ>>();
      |         ^~~~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:54:9: error: ‘previous_coefficients_’ was not declared in this scope
   54 |         previous_coefficients_ = pcl::make_shared<pcl::ModelCoefficients>();
      |         ^~~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp: In member function ‘void GroundPlaneFitterNode::cloud_callback(sensor_msgs::msg::PointCloud2_<std::allocator<void> >::SharedPtr)’:
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:70:34: error: ‘ground_height_threshold_min_’ was not declared in this scope
   70 |         pass_obs.setFilterLimits(ground_height_threshold_min_, ground_height_threshold_max_);
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:70:64: error: ‘ground_height_threshold_max_’ was not declared in this scope
   70 |         pass_obs.setFilterLimits(ground_height_threshold_min_, ground_height_threshold_max_);
      |                                                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:92:10: error: ‘accumulated_candidates_’ was not declared in this scope
   92 |         *accumulated_candidates_ += *ground_candidates;
      |          ^~~~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:95:32: error: ‘voxel_leaf_size_’ was not declared in this scope
   95 |         voxel_grid.setLeafSize(voxel_leaf_size_, voxel_leaf_size_, voxel_leaf_size_);
      |                                ^~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:107:34: error: ‘ransac_distance_threshold_’ was not declared in this scope
  107 |         seg.setDistanceThreshold(ransac_distance_threshold_);
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:118:13: error: ‘first_plane_’ was not declared in this scope
  118 |         if (first_plane_)
      |             ^~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:120:14: error: ‘previous_coefficients_’ was not declared in this scope
  120 |             *previous_coefficients_ = *current_coefficients;
      |              ^~~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:127:17: error: ‘previous_coefficients_’ was not declared in this scope
  127 |                 previous_coefficients_->values[i] =
      |                 ^~~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:128:21: error: ‘smoothing_alpha_’ was not declared in this scope
  128 |                     smoothing_alpha_ * current_coefficients->values[i] +
      |                     ^~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:147:44: error: ‘previous_coefficients_’ was not declared in this scope
  147 |         publish_plane_marker(msg->header, *previous_coefficients_);
      |                                            ^~~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp: In member function ‘void GroundPlaneFitterNode::publish_plane_marker(const std_msgs::msg::Header&, const pcl::ModelCoefficients&)’:
/home/p/ros2_ws/src/cpp_package/src/ground_plane_fitter_node.cpp:207:9: error: ‘marker_publisher_’ was not declared in this scope; did you mean ‘rmw_publisher_t’?
  207 |         marker_publisher_->publish(marker);
      |         ^~~~~~~~~~~~~~~~~
      |         rmw_publisher_t
gmake[2]: *** [CMakeFiles/ground_plane_fitter_node.dir/build.make:76: CMakeFiles/ground_plane_fitter_node.dir/src/ground_plane_fitter_node.cpp.o] 오류 1
gmake[1]: *** [CMakeFiles/Makefile2:1091: CMakeFiles/ground_plane_fitter_node.dir/all] 오류 2
gmake: *** [Makefile:146: all] 오류 2
